--- a/src/content/help.html
+++ b/src/content/help.html
@@ -49,7 +49,8 @@
       </ul>
 
 
-
+      <h3>FoxyProxy Basic</h3>
+      <p>FoxyProxy Basic is a simple on/off proxy switcher without ability to use patterns. FoxyProxy v8.0+ is a unifeid extension. If there are no patterns, it behaves like FoxyProxy Basic.</p>
 
 
 
