--- a/src/content/help.html
+++ b/src/content/help.html
@@ -42,22 +42,18 @@
 
     <h3>Chrome/Chromium</h3>
 
-      <h4>Proxy Authentication</h4>
-      <ul>
-        <li class="experimental">Experimental authentication for http/https only</li>
-        <li>Authentication is domain-specific (not port-specific)</li>
-      </ul>
+    <h4>Proxy Authentication</h4>
+    <ul>
+      <li class="experimental">Experimental authentication for http/https only</li>
+      <li>Authentication is domain-specific (not port-specific)</li>
+    </ul>
 
 
-      <h3>FoxyProxy Basic</h3>
-      <p>FoxyProxy Basic is a simple on/off proxy switcher without ability to use patterns. FoxyProxy v8.0+ is a unifeid extension. If there are no patterns, it behaves like FoxyProxy Basic.</p>
-
-
+    <h3>FoxyProxy Basic</h3>
+    <p>FoxyProxy Basic is a simple on/off proxy switcher without ability to use patterns. FoxyProxy v8.0+ is a unifeid extension. If there are no patterns, it behaves like FoxyProxy Basic.</p>
 
 
     <h2 id="how-to">How to Use</h2>
-    <!-- <p style="color: var(--header)">Select the proxy option</p>
-    <p style="color: var(--btn-hover)">Select the proxy option</p> -->
 
     <h3 id="toolbar-icon">Toolbar Icon</h3>
 
@@ -122,6 +118,12 @@
     <p>You can import/export the entire settings (for backup or share) from/to a local file on your computer.</p>
     <p class="note">Import is non-destructive. Click <b>Save</b> to apply the changes.</p>
 
+
+    <h3>Delete Browser Data</h3>
+    <p>Delete cookies, indexedDB storage, DOM local storage</p>
+
+    <h3>Restore Defaults</h3>
+    <p>Restore all settings to their defaults</p>
 
     <h3 id="import">Import</h3>
 
