--- a/src/content/help.html
+++ b/src/content/help.html
@@ -242,6 +242,7 @@ http://pac-url.com/etc?type=pac&title=Work PAC&color=663300</pre>
     <dl>
       <dt>Add</dt>
       <dd>Quick add ready-made patterns</dd>
+      <dd><code>Plain Host</code> matches hostnames that contain no dots, e.g. http://intranet/</dd>
 
       <dt>Include/Exclude</dt>
       <dd>Select to include or exclude URL that matches the pattern</dd>
