--- a/src/content/help.html
+++ b/src/content/help.html
@@ -104,7 +104,7 @@
 
     <h3 id="global-exclude">Global Exclude</h3>
     <p>Patterns entered here will never be proxied.</p>
-    <p>Wildcard/Regular Expression Patterns are the same as individual include/exclude <a href="#patterns">patterns</a>.</p>
+    <p>Pattern rules are the same as include/exclude <a href="#patterns">patterns</a>.</p>
 
 
 
