--- a/src/content/help.html
+++ b/src/content/help.html
@@ -72,6 +72,19 @@
       <dd>Network connections are passed through the selected Proxy or PAC</dd>
     </dl>
 
+    <h3 id="">Local Server</h3>
+    <p>FoxyProxy can be used  with local proxy servers:</p>
+
+    <ul>
+      <li>Go to Proxy tab ➤ Add a new proxy</li>
+      <li>Fill the details according to own preference e.g. Title: TOR</li>
+      <li>Type: SOCKS</li>
+      <li>TOR ➤ Hostname: 127.0.0.1 — Port: 9050</li>
+      <li>Psiphon ➤ Hostname: 127.0.0.1 — Port: 60351</li>
+      <li>Add patterns, if wanted to use for some locations only</li>
+    </ul>
+
+
 
 
     <h2 id="options">Options</h2>
@@ -105,6 +118,7 @@
     <h3 id="global-exclude">Global Exclude</h3>
     <p>Patterns entered here will never be proxied.</p>
     <p>Pattern rules are the same as include/exclude <a href="#patterns">patterns</a>.</p>
+    <p>The drop down menu quick adds ready-made patterns.</p>
 
 
 
