--- a/src/content/help.html
+++ b/src/content/help.html
@@ -23,12 +23,15 @@
 
     <h2 id="preamble">Preamble</h2>
 
-    <p>FoxyProxy has been around since 2007. If you're upgrading from a legacy version, and your proxy settings are missing, please import them.</p>
+    <p>FoxyProxy has been around since 2007. If you are upgrading from a legacy version, and your proxy settings are missing, please import them.</p>
+
+    <h4>FoxyProxy v8.0+</h4>
+    <p>FoxyProxy has been re-written to comply with manifest v3 requirements. There are some updates to the interface and functions. Please take time to have a quick look over this Help document.</p>
+    <p class="note">Editing is non-destructive. Click <b>Save</b> to apply the changes.</p>
 
 
-    <h3>FoxyProxy Basic</h3>
-    <p>FoxyProxy Basic is a simple on/off proxy switcher without ability to use patterns. FoxyProxy v8.0+ is a unified extension. If there are no patterns, it behaves like FoxyProxy Basic.</p>
-    <p class="warning">FoxyProxy Basic v8.0 will be the last release for FoxyProxy Basic. It has been released to facilitate transition to the unified extension. Please export your settings, install FoxyProxy and then import your settings.</p>
+    <h4>FoxyProxy Basic</h4>
+    <p>FoxyProxy Basic is a simple on/off proxy switcher without ability to use patterns. FoxyProxy v8.0+ is a unified extension. If there are no patterns, it behaves like FoxyProxy Basic. Users of FoxyProxy Basic are advised to export their settings and migrate to FoxyProxy.</p>
 
     <h3>Firefox</h3>
 
@@ -72,50 +75,13 @@
       <dd>Network connections are passed through the selected Proxy or PAC</dd>
     </dl>
 
-    <h3>Page Context Menu</h3>
+    <h3>Page Context Menu <span>(not available on Android)</span></h3>
 
     <dl>
       <dt>Add Host Pattern to ...</dt>
-      <dd>Quickly create and add a patter based on current page URL to the selected proxy</dd>
+      <dd>Quickly create and add a pattern based on the current page URL to the selected proxy</dd>
       <dd>Only top 10 proxies are listed</dd>
-
     </dl>
-
-
-
-    <h3>Keyboard Shortcut</h3>
-    <p>You can change/set keyboard shortcuts</p>
-
-    <h4>Firefox</h4>
-
-    <blockquote><b>Manage extension shortcuts in Firefox</b><br><br>
-
-    You can now change your extensions' keyboard shortcuts on the add-ons page.
-
-    <ol>
-      <li>Click the menu button <code>&#x2630</code>;, click <code>Add-ons and Themes</code> and select <code>Extensions</code>.</li>
-      <li>Click the <i>Tools</i> for all <i>add-ons</i> cogwheel.<br><img src="../image/keyboard-shortcut.png" alt=""></li>
-      <li>Click <code>Manage Extension Shortcuts</code> in the menu.</li>
-      <li>You will see the shortcut options (if available) for your installed add-ons.</li>
-    </ol>
-
-    <cite><a href="https://support.mozilla.org/en-US/kb/manage-extension-shortcuts-firefox" target="_blank">Manage extension shortcuts in Firefox</a></cite>
-    </blockquote>
-
-    <h4>Chrome</h4>
-    <p>Open a new tab and type chrome://extensions/shortcuts</p>
-
-    <h4>Edge</h4>
-    <p>Open a new tab and type edge://extensions/shortcuts</p>
-
-    <h4>Opera</h4>
-    <p>Open a new tab and type opera://settings/keyboardShortcuts</p>
-
-
-
-
-
-
 
 
 
@@ -168,7 +134,7 @@
     <h3 id="global-exclude">Global Exclude</h3>
     <p>Patterns entered here will never be proxied.</p>
     <p>Pattern rules are the same as include/exclude <a href="#patterns">patterns</a>.</p>
-    <p>The drop down menu quick adds ready-made patterns.</p>
+    <p>Use the drop down menu to add ready-made patterns.</p>
 
 
 
@@ -183,8 +149,9 @@
     <h3>Restore Defaults</h3>
     <p>Restore all settings to their defaults</p>
 
-    <h3>Limit WebRTC (Reset WebRTC)</h3>
-    <p>WebRTC has been known to leak real IP. You can toggle limit WebRTC. This function requires "privacy" permission.</p>
+    <h3>Limit/reset WebRTC <span>(requires "privacy" permission)</span></h3>
+    <p>Toggle WebRTC browser settings</p>
+    <p>WebRTC has been known to leak real IP.</p>
 
     <h3 id="import">Import</h3>
 
@@ -241,7 +208,7 @@ http://pac-url.com/etc?type=pac&title=Work PAC&color=663300</pre>
     <p>Add a new proxy entry</p>
 
     <h3>Filter Proxies</h3>
-    <p>Proxy Title & Hostname are searched and display filtered based on the input value (case-insensitive)</p>
+    <p>Proxy <i>Title</i> & <i>Hostname</i> are searched and display filtered based on the input value (case-insensitive)</p>
 
     <h3>Get Location</h3>
     <p>Get domain/IP ger-location from FoxyProxy Servers.</p>
@@ -249,6 +216,21 @@ http://pac-url.com/etc?type=pac&title=Work PAC&color=663300</pre>
 
     <h3>Individual Proxy</h3>
     <dl>
+
+      <dt>Toggle Button</dt>
+      <dd>Toggle proxy active or inactive</dd>
+      <dd>Inactive proxies do not show in toolbar popup select</dd>
+
+      <dt>Delete</dt>
+      <dd>Delete the proxy and its patterns</dd>
+
+      <dt>Up/Down Triangle</dt>
+      <dd>Move the proxy up or down</dd>
+
+
+      <dt>Left Panel</dt>
+      <dd>Click to toggle between Proxy & Pattern</dd>
+
       <dt>Title</dt>
       <dd>Set the proxy title</dd>
 
@@ -275,17 +257,15 @@ http://pac-url.com/etc?type=pac&title=Work PAC&color=663300</pre>
       <dt>PAC URL</dt>
       <dd>Required for PAC type</dd>
 
-      <dt>Enable</dt>
-      <dd>Enable/disable the proxy and its patterns</dd>
+      <dt>Proxy DNS (SOCKS 5 only) <span>(Firefox only)</span></dt>
+      <dd>Option to pass DNS to the SOCKS proxy</dd>
 
-      <dt>Delete</dt>
-      <dd>Delete the proxy and its patterns</dd>
+
     </dl>
 
 
     <h3 id="patterns">Patterns</h3>
     <p>Patterns can be full or partial match which means it can match the entire URL or only part of it.</p>
-
 
     <p>When FoxyProxy is set to <i>Proxy by Patterns</i> and there are existing patterns:</p>
     <ul>
@@ -295,9 +275,9 @@ http://pac-url.com/etc?type=pac&title=Work PAC&color=663300</pre>
     </ul>
 
     <dl>
-      <dt>Add</dt>
+      <dt>Quick Add</dt>
       <dd>Quick add ready-made patterns</dd>
-      <dd><code>Plain Host</code> matches hostnames that contain no dots, e.g. http://intranet/</dd>
+      <dd><code>Plain Host</code> matches hostnames that contain no dots, e.g. <code>http://localhost/</code></dd>
 
       <dt>Include/Exclude</dt>
       <dd>Select to include or exclude URL that matches the pattern</dd>
