Self-credit the Ukrainian translation 🇺🇦

--- a/src/content/about.html
+++ b/src/content/about.html
@@ -42,6 +42,7 @@
       <dd>fa: <a href="https://github.com/axone13" target="_blank">Matin Kargar </a></dd>
       <dd>fr: <a href="https://github.com/Hugo-C" target="_blank">Hugo-C</a></dd>
       <dd>ru: <a href="https://github.com/sosiska" target="_blank">Kirill Motkov</a></dd>
+      <dd>uk: <a href="https://github.com/sponsors/webknjaz" target="_blank">Sviatoslav Sydorenko</a></dd>
       <dd>zh_CN: <a href="https://github.com/wsxy162" target="_blank">FeralMeow </a></dd>
       <dd>zh_TW: <a href="https://github.com/samuikaze" target="_blank">samuikaze</a></dd>
 
