Change cooky's attribution per email

--- a/src/content/about.html
+++ b/src/content/about.html
@@ -13,7 +13,7 @@
   </nav>
 
   <article class="about">
-
+x
     <h2 id="changelog">Changelog</h2>
     <dl>
       <dt>8.0</dt>
@@ -41,7 +41,7 @@
       <dd>es: <a href="https://github.com/LuisAlfredo92" target="_blank">Luis Alfredo Figueroa Bracamontes</a></dd>
       <dd>fa: <a href="https://github.com/axone13" target="_blank">Matin Kargar </a></dd>
       <dd>fr: <a href="https://github.com/Hugo-C" target="_blank">Hugo-C</a></dd>
-      <dd>pl: Cooky</dd>
+      <dd>pl: Grzegorz Koryga</dd>
       <dd>ru: <a href="https://github.com/sosiska" target="_blank">Kirill Motkov</a></dd>
       <dd>zh_CN: <a href="https://github.com/wsxy162" target="_blank">FeralMeow </a></dd>
       <dd>zh_TW: <a href="https://github.com/samuikaze" target="_blank">samuikaze</a></dd>
