--- a/src/content/about.html
+++ b/src/content/about.html
@@ -44,7 +44,7 @@
       <dd>pl: Grzegorz Koryga</dd>
       <dd>pt_BR: </dd>
       <dd>ru: <a href="https://github.com/sosiska" target="_blank">Kirill Motkov</a></dd>
-      <dd>uk: <a href="https://github.com/sponsors/webknjaz" target="_blank">Sviatoslav Sydorenko</a></dd></dd>
+      <dd>uk: <a href="https://github.com/sponsors/webknjaz" target="_blank">Sviatoslav Sydorenko</a></dd>
       <dd>zh_CN: <a href="https://github.com/wsxy162" target="_blank">FeralMeow </a></dd>
       <dd>zh_TW: <a href="https://github.com/samuikaze" target="_blank">samuikaze</a></dd>
 
