--- a/src/content/popup.html
+++ b/src/content/popup.html
@@ -34,6 +34,8 @@
           </select>
         </div>
 
+        <div class="excludeHost" data-i18n="excludeHost"></div>
+
         <!-- /main display -->
 
         <div class="button">
