--- a/src/content/about.html
+++ b/src/content/about.html
@@ -23,6 +23,8 @@
         <dd>Unified code for Firefox, Chrome, and other Chromium-based browsers</dd>
         <dd>Unified storage to share between Firefox & Chrome</dd>
         <dd>Updated code & style for manifest v3 (MV3) compatibility</dd>
+        <dd>Increased minimum version to Firefox 93 (released 2021-10-05)</dd>
+        <dd>Dropped 'browser_style' in preparation for MV3</dd>
         <dd></dd>
         <dd></dd>
         <dd></dd>
